@@ -112,9 +112,14 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
+        <configuration>
+          <argLine>--add-opens tasks/tasks.model=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
+
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
